src/test/deca/context/invalid/our_tests/jb-wrong-override3.deca
// Description:
//    Override with wrong return type
//
// Resultats:
//    Should throw Contextual error (rule 2.7)
//
// Historique:
//    cree le 22/01/2017

class A {
    boolean equals(A o) {}
}
